--- a/RNProject/android/app/src/main/res/values/styles.xml
+++ b/RNProject/android/app/src/main/res/values/styles.xml
@@ -1,15 +1,13 @@
 <resources>
 
-   <!-- Base application theme. -->
-   <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-      <!-- Customize your theme here. -->
-   </style>
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <!-- Customize your theme here. -->
+    </style>
    <!-- Add the following lines (BootTheme should inherit from AppTheme) -->
-   <!-- BootTheme should inherit from Theme.SplashScreen -->
-   <style name="BootTheme" parent="Theme.SplashScreen">
-      <item name="windowSplashScreenBackground">@color/bootsplash_background</item>
-      <item name="windowSplashScreenAnimatedIcon">@mipmap/bootsplash_logo</item>
-      <item name="postSplashScreenTheme">@style/AppTheme</item>
+   <style name="BootTheme" parent="AppTheme">
+      <!-- set the generated bootsplash.xml drawable as activity background -->
+      <item name="android:background">@drawable/bootsplash</item>
    </style>
 
 </resources>
